right align submit button, set fixed height for book tiles for uniformity

--- a/style.css
+++ b/style.css
@@ -30,27 +30,31 @@
     width: 30px
 }
 
+#bookForm .dialog-buttons {
+    align-self: flex-end;
+}
+
 #bookForm #submitBtn {
     background-color: lightgreen;
-    /* TODO move submit button to the right */
+    height: 30px;
+
+    border-radius: 5px;
 }
 
 .book {
     padding: 10px;
     margin: 5px;
 
-    width: 250px;
+    width: 300px;
+    height: 200px;
 
     display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-columns: 1fr 3fr .5fr;
     grid-template-rows: 1fr 1fr 1fr .5fr;
     border: solid black 2px;
     border-radius: 20px;
 
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
-    /* TODO make into 3 column grid, X, main content, read checkbox */
-
 }
 
 .book button {
